--- a/static/style.css
+++ b/static/style.css
@@ -10,12 +10,15 @@ ul              { list-style: none; padding-right: 40px; }
 .entries        { list-style: none; margin: 0; padding: 0; }
 .entries li     { margin: 0.8em 1.2em; }
 .entries li h2  { margin-left: -1em; }
+.description    { font-family: 'Arvo'; font-size: 1em; font-weight: 700; margin-bottom: 40px;}
 .section        { font-family: 'Arvo'; font-size: 1.8em; font-weight: 400; color: #2c3e50;}
 .tweettime      { font-family: 'Arvo'; font-size: 1em; font-weight: 700; font-style: italic; color: #f39c12;}
 .username       { font-family: 'Arvo'; font-size: 3em; font-weight: 700; color: #27ae60; margin-left: 28px; margin-bottom: 10px; }
 .mostpopular    { margin-top: 10px; margin-bottom: 10px; margin-left: auto; margin-right: auto; width: 80%;}
+.little         { font-size: 0.8em; color: #bdc3c7; }
 .big            { font-size: 1.5em; }
 .huge           { font-size: 3em;}
+.brightblue     { color: #3498db;}
 .subtext        { margin: 0.8em; }
 .add-entry      { font-size: 0.9em; border-bottom: 1px solid #ccc; }
 .add-entry dl   { font-weight: bold; }
