--- a/templates/user.html
+++ b/templates/user.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
-
+  Here are some stats about...
   <div class="section username">{{ twitter_user.screen_name }}</div>
   <div style="width: 67%; margin-left: auto; margin-right: auto;">
     <div style="width: 51%; margin-left: 20px; display: inline-block;">
@@ -19,7 +19,7 @@
       <ul class="entries">
         <li>
           <div class="tweettime">Total Tweets:</div>
-          <div class="big">{{ twitter_user.num_tweets[0] }}</div>
+          <div class="big">{{ twitter_user.num_tweets }}</div>
         <li>
           <div class="tweettime">Tweets per day:</div>
         <li>
@@ -28,13 +28,18 @@
         <li>
           <div class="tweettime">Average favorites per tweet:</div>
           <div class="big">{{ twitter_user.favorites_per_tweet }}</div>
+        <li>
+          <div class="tweettime">Average swears per tweet:</div>
+          <div class="big">{{ twitter_user.curses_per_tweet }}</div>
       </ul>
     <!-- Recent tweets -->
     <li>
       <div class="section">Some recent tweets: </div>
       <ul class="entries">
       {% for tweet in twitter_user.tweets[:5] %}
-        <li><div class="tweettime">{{ tweet.time_created|safe }}</div>{{ tweet.text|safe }}
+        <li><div class="tweettime">{{ tweet.time_created|safe }}</div>
+          {{ tweet.text|safe }}
+          <div class="little">Favorites: {{ tweet.favorite_count }} Retweets: {{ tweet.retweet_count }}</div>
       {% endfor %}
       </ul>
     <!-- Most popular -->
@@ -44,6 +49,7 @@
         <div>
           <div class="tweettime big">{{ twitter_user.most_pop.time_created|safe }}</div>
           <div class="big">{{ twitter_user.most_pop.text|safe }}</div>
+          <div class="little brightblue">Favorites: {{ twitter_user.most_pop.favorite_count }} Retweets: {{ twitter_user.most_pop.retweet_count }}</div>
         </div>
       </div>
   </ul>
